# Wallet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-bake.hcl  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_refresh_tokens.py  003_rename_monthly_amount.py  004_tags.py  005_oauth.py  006_onboarding.py  007_currency_catalog.py  008_app_state.py  009_app_state_v2.py  010_drop_app_state.py  011_base_currency.py
backend/app/: celery_app.py  main.py
backend/app/admin/: __init__.py  auth.py  views.py
backend/app/api/: _crud.py  analytics.py  auth.py  balance_snapshots.py  currencies.py  exchange_rates.py  expense_categories.py  income_sources.py  oauth.py  reports.py  storage.py  transactions.py
backend/app/core/: config.py  database.py  db_helpers.py  dependencies.py  exceptions.py  password_policy.py  redis.py  security.py
backend/app/kafka/: consumers.py  publishers.py
backend/app/messaging/: broker.py  consumers.py  publishers.py
backend/app/models/: __init__.py  app_state.py  balance_snapshot.py  currency.py  currency_catalog.py  exchange_rate.py  expense_category.py  income_source.py  refresh_token.py  storage.py  transaction.py  user.py
backend/app/schemas/: _validators.py  auth.py  balance_snapshot.py  currency.py  exchange_rate.py  expense_category.py  income_source.py  storage.py  transaction.py
backend/app/services/: analytics.py  exchange_rates.py
backend/app/services/analytics/: __init__.py  balance.py  income.py  periods.py  summary.py
backend/app/tasks/: __init__.py  _engine.py  _http.py  catalog_sync.py  rate_sync.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py
backend/tests/api/: test_analytics.py  test_auth.py  test_balance_snapshots.py  test_currencies.py  test_expense_categories.py  test_income_sources.py  test_oauth.py  test_storage.py  test_transactions.py
backend/tests/core/: test_password_policy.py  test_security.py
design/: app.jsx  (+1 more)
report-service/: pyproject.toml
report-service/app/: main.py  models.py
report-service/app/core/: config.py
report-service/app/kafka/: broker.py  consumers.py
report-service/app/messaging/: consumers.py
report-service/app/reports/: excel.py  router.py
(+114 files in other folders)
