[project]
name = "wallet"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic[email]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",
    "celery[redis]>=5.3",
    "httpx>=0.27",
    "babel>=2.14",
    "redis>=5.0",
    "sqladmin[full]>=0.19",
    "faststream[kafka]",
    "wallet-sdk",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.uv.sources]
wallet-sdk = { path = "../wallet-sdk" }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
