[project]
name = "report-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "faststream[kafka]",
    "openpyxl",
    "pydantic-settings",
    "wallet-sdk",
]

[tool.uv.sources]
wallet-sdk = { path = "../wallet-sdk" }

[tool.setuptools.packages.find]
include = ["app*"]